[tool.poetry]
name = "scikit-ntk"
version = "1.1.1"
description = "Implementation of the neural tangent kernel for scikit-learn's Gaussian process module."
license="BSD-3-Clause"
authors = [
    "Ronaldas P LenceviÄius <contact@ronaldas.dev>",
]
packages = [
    { include = "skntk" },
]
readme = "README.md"
homepage = "https://github.com/392781/scikit-ntk"
repository = "https://github.com/392781/scikit-ntk"
keywords = ["sckit-learn", "sklearn"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/392781/scikit-ntk/issues"

[tool.poetry.dependencies]
python = ">=3.7, <3.11"
scikit-learn = [
    {version = "^1.0.0", python = ">=3.7,<3.10"},
    {version = "^1.1.3", python = ">=3.10"}
]

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
flake8 = "^5.0.4"

[tool.pytest.ini_options]
testpaths = ["tests"]
